wip: intermediary point